# crs-prism

./: .dockerignore  LICENSE  README.md  patcher.py  pyproject.toml
agents/: prism.md  prism.py  template.py
crete/agent/: context.py  multi_retrieval_agent.py
crete/analyzer/: jvm_stackoverflow.py  jvm_timeout.py
crete/atoms/: __init__.py  action.py  detection.py
crete/commons/: crash_analysis.py  interaction.py
crete/environment/: __init__.py  environment_pool.py  exceptions.py  libcrs_environment.py
crete/evaluator/: default_evaluator.py  docker_evaluator.py
crete/patcher/: base_patch_extractor.py  base_patcher.py  line_range_patch_extractor.py  llm_node.py  system_guided_patcher.py
crete/prism/: __init__.py
crete/prism/states/: analysis_team_state.py  common_state.py  evaluation_team_state.py  inter_team_state.py  patch_team_state.py
crete/prism/teams/analysis/: analysis_team.py  code_context_provider.py  fix_strategy_generator.py
crete/prism/teams/evaluation/: evaluation_reporter.py  evaluation_team.py  evaluator.py
crete/prism/teams/patch/: patch_generator.py  patch_reviewer.py  patch_team.py
crete/retriever/: ast_grep_retriever.py  base_retriever.py  code_retriever_subgraph.py  file_retriever.py  ripgrep_retriever.py
crete/state/: patch_state.py  retrieval_state.py
crete/workflow/: system_guided_patch_workflow.py
oss-crs/: base.Dockerfile  builder.Dockerfile  crs.yaml  docker-bake.hcl  example-compose.yaml  patcher.Dockerfile  sample-litellm-config.yaml
